--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
 
       # Step 4: Build the project using go build
       - name: Build project
-        run: go build -o arcade cmd/engine/main.go
+        run: make -f build/Makefile all
 
       # Step 5: Upload Build Artifacts (optional)
       - name: Upload Build Artifacts
