--- a/conf.d/config.toml
+++ b/conf.d/config.toml
@@ -74,7 +74,7 @@ type = "mysql"
 host = "127.0.0.1"
 port = "3306"
 user = "root"
-password = "123456"
+password = "1qaz@WSX."
 db = "arcade_meta"
 # sql print, false or true
 output = true
