--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,19 +44,19 @@ jobs:
     outputs:
       build_time: ${{ steps.build-image.outputs.build_time }}
     steps:
-      - uses: actions/checkout@v4
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # - uses: actions/checkout@v4
+      # - name: Log in to Docker Hub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ secrets.DOCKERHUB_USER }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push streampark
         id: build-image
         run: |
           BUILD_TIME=$(date +'%Y%m%d')
-          IMAGE_TAG=${IMAGE_REPO_NAME}/${SERVICE_NAME}:$(git rev-parse --short HEAD)_$BUILD_TIME
+          IMAGE_TAG=${IMAGE_REPO_NAME}/${SERVICE_NAME}:$(git rev-parse --short HEAD | cut -c1-7)_$BUILD_TIME
           docker build -t ${IMAGE_TAG} .
           docker push $IMAGE_TAG
           echo "build_time=$BUILD_TIME" >> $GITHUB_OUTPUT
@@ -173,4 +173,3 @@ jobs:
                   exit 1
               fi
           done
-
