--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,15 +44,16 @@ jobs:
     outputs:
       build_time: ${{ steps.build-image.outputs.build_time }}
     steps:
-      # - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       # - name: Log in to Docker Hub
       #   uses: docker/login-action@v2
       #   with:
       #     registry: ghcr.io
       #     username: ${{ secrets.DOCKERHUB_USER }}
       #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Log in to GitHub Container Registry
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - uses: actions/checkout@v4
       - name: Build and push streampark
         id: build-image
         run: |
