--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,13 +45,10 @@ jobs:
       build_time: ${{ steps.build-image.outputs.build_time }}
     steps:
       - uses: actions/checkout@v4
-      # - name: Log in to Docker Hub
-      #   uses: docker/login-action@v2
-      #   with:
-      #     registry: ghcr.io
-      #     username: ${{ secrets.DOCKERHUB_USER }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Log in to GitHub Container Registry
+        permissions:
+          contents: read
+          packages: write
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Build and push streampark
