功能：集成 gRPC 服务器并更新项目结构
- 添加 gRPC 服务器实现，支持 Agent、Job 和 Stream 服务。
- 引入使用 Google Wire 的依赖注入，以实现更好的模块化。
- 更新 Makefile，包含用于依赖注入的新 wire 命令。
- 增强配置管理，以支持 `config.toml` 中的 gRPC 设置。
- 重构服务和存储库层，以适应新的 gRPC 服务。
- 清理了未使用的代码并改进了整体项目组织。

--- a/conf.d/config.toml
+++ b/conf.d/config.toml
@@ -20,6 +20,14 @@ rotateSize = 256
 # kafka topic
 # kafkaTopic = ""
 
+[grpc]
+host = "0.0.0.0"
+port = 9090
+maxConnections = 1000
+maxQPS = 1000
+# unit: second
+readWriteTimeout = 5
+
 [http]
 host = "0.0.0.0"
 port = 8080
