feat：集成存储解决方案并更新配置
- 增加对多种存储提供商的支持，包括 MinIO、S3、GCS、OSS 和 COS。
- 重构配置管理，以适应 `config.toml` 中的新存储设置。
- 为每个提供商引入了新的存储接口和实现。
- 移除已弃用的 MinIO 软件包，并精简与存储相关的代码。
- 通过更新 `go.mod` 和 `go.sum` 中的相关模块，增强了依赖项管理。
- 改进数据库连接方法中的错误处理和上下文管理。

--- a/conf.d/config.toml
+++ b/conf.d/config.toml
@@ -127,11 +127,12 @@ readTimeout = 10
 # unit: second
 writeTimeout = 10
 
-[minio]
-# Tips: Do not use minio user for client authentication, instead create access keys
-# https://min.io/docs/minio/container/administration/console/security-and-access.html
-accessKeyId = ""
-secretAccessKey = ""
-endpoint = ""
-bucket = ""
-useSSL = false
+[storage]
+Provider  = "minio"
+AccessKey = ""
+SecretKey = ""
+Endpoint  = ""
+Bucket    = ""
+Region    = ""
+UseTLS    = false
+BasePath  = ""
