feat：增强作业管理和配置
- 引入新的作业工作池系统​​，管理和执行 CI/CD 任务。
- 在 `config.toml` 中添加作业管理的配置选项，包括最大工作线程数、队列大小和工作线程超时时间。
- 实现新的 `AgentConfig` 模型，用于将特定于代理的配置存储在数据库中。
- 更新 gRPC 服务器，以支持与作业相关的服务，并集成了中间件，以增强日志记录和身份验证。
- 重构现有代码，以提高模块化和可维护性，包括删除未使用的设置和文件。
- 增强文档，以包含新的作业工作池功能和代理配置详细信息。

--- a/conf.d/config.toml
+++ b/conf.d/config.toml
@@ -136,3 +136,12 @@ Bucket    = ""
 Region    = ""
 UseTLS    = false
 BasePath  = ""
+
+[job]
+# Job worker pool configuration
+# If maxWorkers is 0, it will be calculated based on CPU cores (CPU * 2)
+# If queueSize is 0, it will be calculated as maxWorkers * 10
+maxWorkers = 0
+queueSize = 0
+# unit: second
+workerTimeout = 1800
