feat：集成存储配置管理并更新相关服务
- 将存储配置管理从静态文件迁移到动态数据库驱动的方式，从而实现实时更新和管理。
- 引入新的“StorageService”和“StorageRepo”来处理存储配置的 CRUD 操作。
- 更新“Makefile”，添加“deps-sync”目标，用于管理 Go 模块依赖项。
- 增强 HTTP 路由器，以支持新的存储配置路由，包括创建、检索、更新和删除。
- 重构现有代码，删除已弃用的存储处​​理方式，并提升模块化程度。
- 更新文档，以反映存储配置管理和 API 使用方面的变化。

--- a/conf.d/config.toml
+++ b/conf.d/config.toml
@@ -1,6 +1,6 @@
 [log]
 # support stdout, file, kafka
-output = "file"
+output = "stdout"
 # log level: DEBUG INFO WARNING ERROR FATAL
 level = "DEBUG"
 # log write directory
@@ -36,7 +36,7 @@ mode = "debug"
 # unit: second
 heartbeat = 60
 # enable pprof, false or true
-pprof = false
+pprof = true
 # enable metrics, false or true
 exposeMetrics = true
 # access log, false or true
@@ -78,8 +78,8 @@ type = "mysql"
 host = "127.0.0.1"
 port = "3306"
 user = "root"
-password = "1qaz@WSX."
-db = "arcade_ci_meta"
+password = "muP4woo9Aidiph2jeX8u"
+db = "arcade"
 # sql print, false or true
 output = true
 # max open connections
@@ -98,18 +98,19 @@ maxIdleTime = 60
 [database.mongodb]
 # cluster, standalone
 # cluster: uri = "mongodb://localhost:27017,localhost:27018,localhost:27019"
-# auth: uri = "mongodb://username:password@localhost:27017"
-uri = "mongodb://127.0.0.1:27017"
+# auth: 
+uri = "mongodb://mongo:muP4woo9Aidiph2jeX8u@localhost:27017"
+# uri = "mongodb://127.0.0.1:27017"
 compressors = ["snappy", "zstd", "zlib"]
-db = "job_log"
+db = "arcade_job_log"
 poolSize = 100
 
 [redis]
 # support single, cluster, sentinel
 mode = "single"
 # address, ip:port or ip1:port,ip2:port for cluster and sentinel(SentinelAddrs)
-address = "0.0.0.0:6379"
-password = "1qaz@WSX."
+address = "127.0.0.1:6379"
+password = ""
 db = 0
 poolSize = 50
 #useTLS = false
@@ -127,15 +128,17 @@ readTimeout = 10
 # unit: second
 writeTimeout = 10
 
-[storage]
-Provider  = "minio"
-AccessKey = ""
-SecretKey = ""
-Endpoint  = ""
-Bucket    = ""
-Region    = ""
-UseTLS    = false
-BasePath  = ""
+# 存储配置已移至数据库管理
+# 请使用 API 或管理界面配置存储
+# [storage]
+# Provider  = "minio"
+# AccessKey = ""
+# SecretKey = ""
+# Endpoint  = ""
+# Bucket    = ""
+# Region    = ""
+# UseTLS    = false
+# BasePath  = ""
 
 [job]
 # Job worker pool configuration
