refactor: 重构 gRPC 服务和 API 结构
- 将 Agent、Pipeline、Stream 和 Task 服务的 gRPC 方法和消息结构重命名为更具描述性的名称，增强可读性。
- 更新相关的 proto 文件，移除冗余的配置和不再使用的文件，简化项目结构。
- 引入新的 buf 工具支持，替换原有的 protoc 插件安装和代码生成逻辑。
- 添加 README 文档，详细描述 Arcade 项目的 gRPC API 定义和使用示例，提升开发者体验。
- 更新依赖注入和服务注册逻辑，确保新结构的正常运行。

--- a/api/buf.yaml
+++ b/api/buf.yaml
@@ -1,9 +1,8 @@
 version: v2
 # Buf 配置文件 - 用于管理和验证 Protocol Buffers
 
-# 模块配置
-modules:
-  - path: .
+name: buf.build/observabil/arcade
+deps: []
 
 # Lint 配置 - 代码风格和最佳实践检查
 lint:
