feat: 更新插件系统和相关文档
- 在 .gitignore 中添加对插件目录的忽略。
- 移除 go.mod 中对 github.com/IBM/sarama 的依赖，并更新其他依赖版本。
- 在 Makefile 中更新 wire 相关的目标描述为英文。
- 新增中文 API 文档，涵盖插件开发、分发和系统重构指南。
- 在配置文件中添加插件缓存目录和请求体大小限制的配置项。
- 重构插件管理器，支持心跳检查和 MongoDB 持久化。
- 更新数据库模型，添加插件任务相关的结构和方法。
- 实现插件的动态路径生成和配置管理，简化插件的使用和管理流程。
- 更新存储适配器，支持更好的文件上传和下载功能。
- 移除不再使用的文件和代码，提升项目结构的清晰度和可维护性。

--- a/conf.d/config.toml
+++ b/conf.d/config.toml
@@ -55,6 +55,10 @@ idleTimeout = 60
 # shutdown timeout
 # unit: second
 shutdownTimeout = 10
+# request body size limit (bytes)
+# default: 104857600 (100MB) - for plugin uploads
+# unit: bytes
+bodyLimit = 104857600
 
 [http.tls]
 certFile = ''
@@ -102,7 +106,7 @@ maxIdleTime = 60
 uri = "mongodb://mongo:muP4woo9Aidiph2jeX8u@localhost:27017"
 # uri = "mongodb://127.0.0.1:27017"
 compressors = ["snappy", "zstd", "zlib"]
-db = "arcade_job_log"
+db = "arcade"
 poolSize = 100
 
 [redis]
@@ -148,3 +152,8 @@ maxWorkers = 0
 queueSize = 0
 # unit: second
 workerTimeout = 1800
+
+[plugin]
+# Plugin cache directory for storing downloaded plugin files
+# Default: /var/lib/arcade/plugins
+cacheDir = "plugins"
