feat: 添加流水线和任务状态机实现及测试
- 新增流水线状态机和任务状态机的实现，支持多种状态及其转移逻辑。
- 为流水线和任务状态机编写全面的单元测试，确保状态转移的正确性和稳定性。
- 实现状态机的钩子功能，允许在状态变更时执行自定义逻辑。
- 更新相关文档，详细说明状态机的使用和状态转移规则。

--- a/conf.d/config.toml
+++ b/conf.d/config.toml
@@ -5,6 +5,8 @@ output = "stdout"
 level = "DEBUG"
 # log write directory
 path = "logs"
+# log file name
+filename = "arcade.LOG"
 # rotate by time
 keepHours = 4
 # rotate by size
