--- a/pkg/plugins/bash/manifest.json
+++ b/pkg/plugins/bash/manifest.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Bash 脚本执行插件，支持执行 bash 脚本、命令和脚本文件，适用于自动化任务和 CI/CD 流程",
   "author": "Arcade Team <support@go-arcade.io>",
-  "homepage": "https://github.com/observabil/arcade",
-  "repository": "https://github.com/observabil/arcade",
+  "homepage": "https://github.com/go-arcade/arcade",
+  "repository": "https://github.com/go-arcade/arcade",
   "pluginType": "custom",
   "entryPoint": "bash",
   "dependencies": [],
