--- a/pkg/plugins/stdout/manifest.json
+++ b/pkg/plugins/stdout/manifest.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "标准输出插件，将消息打印到标准输出，适用于调试和日志记录",
   "author": "Arcade Team <support@go-arcade.io>",
-  "homepage": "https://github.com/observabil/arcade",
-  "repository": "https://github.com/observabil/arcade",
+  "homepage": "https://github.com/go-arcade/arcade",
+  "repository": "https://github.com/go-arcade/arcade",
   "pluginType": "custom",
   "entryPoint": "stdout",
   "dependencies": [],
