--- a/api/buf.yaml
+++ b/api/buf.yaml
@@ -1,7 +1,7 @@
 version: v2
 # Buf 配置文件 - 用于管理和验证 Protocol Buffers
 
-name: buf.build/observabil/arcade
+name: buf.build/go-arcade/arcade
 deps: []
 
 # Lint 配置 - 代码风格和最佳实践检查
