feat: Add notification system with templates and multiple channels
- Introduced a notification system that supports various channels including Slack, Discord, Telegram, and more.
- Implemented a template management service to handle notification templates, allowing for dynamic content rendering.
- Added predefined templates for common notifications such as build success, build failure, and approval requests.
- Created a flexible channel interface to facilitate sending messages through different platforms with authentication support.
- Updated .gitignore to exclude unnecessary files and added new SQL scripts for notification templates and logs.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .idea
 .vscode
+.cursor
 /bin
 /internal/engine/router/static/*
 !/internal/engine/router/static/.gitkeep
@@ -9,3 +10,4 @@ docs/*.md
 *.so
 /api/*/*/*.pb.go
 /cmd/arcade/wire_gen.go
+.DS_Store
