--- a/conf.d/config.toml
+++ b/conf.d/config.toml
@@ -1,3 +1,19 @@
+[metrics]
+# metrics server host
+host = "0.0.0.0"
+# metrics server port
+port = 8081
+# enable metrics server, false or true
+enable = true
+
+[pprof]
+# pprof server host
+host = "0.0.0.0"
+# pprof server port
+port = 8082
+# enable pprof server, false or true
+enable = true
+
 [log]
 # support stdout, file, kafka
 output = "stdout"
@@ -15,10 +31,13 @@ rotateNum = 3
 rotateSize = 256
 
 [grpc]
+# grpc server host
 host = "0.0.0.0"
+# grpc server port
 port = 9090
+# max connections
 maxConnections = 1000
-maxQPS = 1000
+# read write timeout
 # unit: second
 readWriteTimeout = 5
 
@@ -27,8 +46,6 @@ host = "0.0.0.0"
 port = 8080
 # unit: second
 heartbeat = 60
-# enable pprof, false or true
-pprof = true
 # access log, false or true
 accessLog = true
 # use file assets, false or true
@@ -67,10 +84,14 @@ secretKey = "bf284d03-ba65-42d4-a9fe-0d2fbfe61060"
 [database]
 # support mysql
 type = "mysql"
+# mysql host
 host = "127.0.0.1"
+# mysql port
 port = "3306"
+# mysql user
 user = "root"
 password = "muP4woo9Aidiph2jeX8u"
+# mysql database
 db = "arcade"
 # sql print, false or true
 output = true
