feat: Implement identity provider management and enhance metrics configuration
- Added new identity provider management functionality, including CRUD operations for providers and support for OAuth, OIDC, and LDAP authentication.
- Introduced a new router for identity-related endpoints, allowing for provider listing, creation, updates, and toggling of enabled status.
- Enhanced metrics and pprof configurations in `agent.toml` and `config.toml` to include customizable paths and default values.
- Updated service and repository layers to integrate the new identity management features, ensuring a cohesive architecture.
- Refactored logging to maintain consistency across the application, improving clarity in log outputs.

--- a/conf.d/agent.toml
+++ b/conf.d/agent.toml
@@ -11,20 +11,24 @@ interval = 60
 labels = { "env" = "production", "region" = "us-west" }
 
 [metrics]
+# enable metrics server, false or true
+enable = true
 # metrics server host
 host = "0.0.0.0"
 # metrics server port
 port = 8082
-# enable metrics server, false or true
-enable = true
+# metrics server request path, default: "/metrics"
+path = "/metrics"
 
 [pprof]
+# enable pprof server, false or true
+enable = true
 # pprof server host
 host = "0.0.0.0"
 # pprof server port
 port = 8083
-# enable pprof server, false or true
-enable = true
+# pprof server request path prefix, default: "/debug/pprof"
+path = "/debug/pprof"
 
 [log]
 # support stdout, file, kafka
