--- a/conf.d/config.toml
+++ b/conf.d/config.toml
@@ -1,18 +1,22 @@
 [metrics]
+# enable metrics server, false or true
+enable = true
 # metrics server host
 host = "0.0.0.0"
 # metrics server port
-port = 8081
-# enable metrics server, false or true
-enable = true
+port = 8082
+# metrics server request path, default: "/metrics"
+path = "/metrics"
 
 [pprof]
+# enable pprof server, false or true
+enable = true
 # pprof server host
 host = "0.0.0.0"
 # pprof server port
-port = 8082
-# enable pprof server, false or true
-enable = true
+port = 8083
+# pprof server request path prefix, default: "/debug/pprof"
+path = "/debug/pprof"
 
 [log]
 # support stdout, file, kafka
