refactor: Update task queue integration and enhance configuration management
- Refactored the task queue integration in both arcade and arcade-agent components, replacing `TaskQueue` with `QueueClient` and `QueueServer` for improved clarity and functionality.
- Updated initialization logic to reflect changes in task queue handling, ensuring proper wiring of dependencies.
- Enhanced configuration files to include new parameters for the queue client and server, allowing for better management of task execution and metrics.
- Introduced a new `queue_client.go` and `queue_server.go` to encapsulate queue client and server functionalities, streamlining the codebase.
- Updated tests to reflect changes in the queue management structure, ensuring robust coverage and functionality.

--- a/conf.d/agent.toml
+++ b/conf.d/agent.toml
@@ -63,6 +63,8 @@ max_age_days = 30
 
 # sandbox configuration
 [agent.sandbox]
+# enable sandbox, false or true
+enable = true
 # sandbox mode: containerd, kubernetes
 mode = "containerd"
 
